// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the modal after click on sonarcloud 1`] = `
<div
  className="overview-meta-card"
>
  <Button
    className="js-project-badges"
    onClick={[Function]}
  >
    overview.badges.get_badge.TRK
  </Button>
</div>
`;

exports[`should display the modal after click on sonarcloud 2`] = `
<Modal
  contentLabel="overview.badges.title"
  onRequestClose={[Function]}
>
  <header
    className="modal-head"
  >
    <h2>
      overview.badges.title
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <p
      className="huge-spacer-bottom"
    >
      overview.badges.description.TRK
    </p>
    <div
      className="badges-list spacer-bottom"
    >
      <BadgeButton
        key="measure"
        onClick={[Function]}
        selected={true}
        type="measure"
        url="host/api/project_badges/measure?branch=branch-6.6&project=foo&metric=alert_status"
      />
      <BadgeButton
        key="quality_gate"
        onClick={[Function]}
        selected={false}
        type="quality_gate"
        url="host/api/project_badges/quality_gate?branch=branch-6.6&project=foo"
      />
      <BadgeButton
        key="marketing"
        onClick={[Function]}
        selected={false}
        type="marketing"
        url="host/images/project_badges/sonarcloud-white.svg"
      />
    </div>
    <p
      className="text-center note huge-spacer-bottom"
    >
      overview.badges.measure.description.TRK
    </p>
    <BadgeParams
      className="big-spacer-bottom"
      metrics={Object {}}
      options={
        Object {
          "color": "white",
          "metric": "alert_status",
        }
      }
      type="measure"
      updateOptions={[Function]}
    />
    <CodeSnippet
      isOneLine={true}
      snippet="[![alert_status](host/api/project_badges/measure?branch=branch-6.6&project=foo&metric=alert_status)](/dashboard)"
    />
  </div>
  <footer
    className="modal-foot"
  >
    <ResetButtonLink
      className="js-modal-close"
      onClick={[Function]}
    >
      close
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`should display the modal after click on sonarqube 1`] = `
<div
  className="overview-meta-card"
>
  <Button
    className="js-project-badges"
    onClick={[Function]}
  >
    overview.badges.get_badge.TRK
  </Button>
</div>
`;

exports[`should display the modal after click on sonarqube 2`] = `
<Modal
  contentLabel="overview.badges.title"
  onRequestClose={[Function]}
>
  <header
    className="modal-head"
  >
    <h2>
      overview.badges.title
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <p
      className="huge-spacer-bottom"
    >
      overview.badges.description.TRK
    </p>
    <div
      className="badges-list spacer-bottom"
    >
      <BadgeButton
        key="measure"
        onClick={[Function]}
        selected={true}
        type="measure"
        url="host/api/project_badges/measure?branch=branch-6.6&project=foo&metric=alert_status"
      />
      <BadgeButton
        key="quality_gate"
        onClick={[Function]}
        selected={false}
        type="quality_gate"
        url="host/api/project_badges/quality_gate?branch=branch-6.6&project=foo"
      />
    </div>
    <p
      className="text-center note huge-spacer-bottom"
    >
      overview.badges.measure.description.TRK
    </p>
    <BadgeParams
      className="big-spacer-bottom"
      metrics={Object {}}
      options={
        Object {
          "color": "white",
          "metric": "alert_status",
        }
      }
      type="measure"
      updateOptions={[Function]}
    />
    <CodeSnippet
      isOneLine={true}
      snippet="[![alert_status](host/api/project_badges/measure?branch=branch-6.6&project=foo&metric=alert_status)](/dashboard)"
    />
  </div>
  <footer
    className="modal-foot"
  >
    <ResetButtonLink
      className="js-modal-close"
      onClick={[Function]}
    >
      close
    </ResetButtonLink>
  </footer>
</Modal>
`;
